--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,32 @@
 .navbar{
     padding:0 !important;
 }
+.carousel-inner{
+    width:100%;
+    max-height: 500px !important;
+}
+.carousel-caption{
+    top:30% !important;
+}
+.heading-1{
+    color:#ffeb00;
+}
+.heading-2{
+    color:#e400ff;
+}
+.heading-3{
+    color:#fff;
+}
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+}
+   
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+}
+.carousel-dark .carousel-control-next-icon, .carousel-dark .carousel-control-prev-icon {
+    filter: invert(0) grayscale(255) !important;
+}
+.carousel-dark .carousel-indicators [data-bs-target] {
+    background-color: #fff !important;
+}
