--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 .navbar{
     padding:0 !important;
 }
@@ -93,3 +94,16 @@
   .copyright p{
       margin:8px 0;
   }
+  .list-group .list-group-item::before{
+      content: "\f061";
+      font-family: "Font Awesome 5 Pro";
+      margin-right: 5px;
+      font-weight: 500;
+  }
+  .swiper {
+    width: 600px;
+    height: 300px;
+  }
+
+
+
